# umegaemochi

./: .gitignore  LICENSE  README.md  co-authored  flake.nix  package.json  package.nix  pnpm-lock.yaml  tsconfig.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: bk9062w0prnx8yszjqwj0phw07zbvvgq-source  pl3lh6l8s6drlvbvjjafgzlhzy36a6xs-source
.github/actions/binary-cache/: action.yaml
.github/workflows/: publish.yaml  publishApk.yaml  publishArm.yaml
src/: App.vue  types.ts
src-tauri/: Cargo.toml  city_code.json  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: daily_reload.rs  disaster_info.rs  lib.rs  main.rs  periodic.rs  settings.rs  sports_news.rs  state.rs
src-tauri/src/commands/: mod.rs  phone.rs  settings.rs  utils.rs
src-tauri/src/server/: filters.rs  mod.rs  router.rs
src-tauri/src/state/: config.rs  disaster_info.rs  mod.rs  settings.rs  todo.rs
src/assets/fonts/: OFL.txt
src/components/: BaseWidget.vue  ButtonSettings.vue  SportsTopicSelectmenu.vue  Tab.vue  WidgetAtCoder.vue  WidgetCalendar.vue  WidgetClock.vue  WidgetExchangeRate.vue  WidgetNews.vue  WidgetPhone.vue  WidgetPicto.vue  WidgetSettings.vue  WidgetSportsNews.vue  WidgetTodo.vue  WidgetWeather.vue  WidgetWeekWeather.vue  WidgetWeeklyWeather.vue  WindowEmergency.vue  WindowSettings.vue  tab.vue
