[package]
name = "umegaemochi"
version = "0.3.0"
description = "A Tauri App"
authors = ["yadokani389"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "umegaemochi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
] }
quick-xml = { version = "0.37.0", features = ["serde", "serialize"] }
localip = "0.2.1"
warp = "0.3.7"
serde_json = "1.0.134"
chrono = { version = "0.4.39", features = ["serde"] }
tokio = { version = "1.42.0", features = ["full"] }
nestify = "0.3.3"
unicode-normalization = "0.1.24"
