[package]
authors = ["yadokani389"]
description = "A Tauri App"
edition = "2021"
name = "umegaemochi"
version = "0.7.5"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "umegaemochi_lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
constcat = "0.5.1"
local-ip-addr = "0.1.1"
nestify = "0.3.3"
quick-xml = { version = "0.37.0", features = ["serde", "serialize"] }
reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
  "json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.134"
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
unicode-normalization = "0.1.24"
uuid = { version = "1.13.1", features = ["v4"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
